update project links

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,7 +13,7 @@
             <div class="row">
               <div class="col-md-4 col-sm-6 portfolio-item">
                   <div class="portfolio-caption">
-                    <a href="http://milendyankov.com/wedeploy-maven-plugin/" class="portfolio-link" data-toggle="modal">
+                    <a href="http://commsen.com/wedeploy-maven-plugin/" class="portfolio-link" data-toggle="modal">
                       <h4>WeDeploy Maven Plugin</h4>
                     </a>
                     <p class="text-muted">Allows to instantly deploy and run Java applications / microservices in WeDeploy cloud!</p>
@@ -21,7 +21,7 @@
               </div>
               <div class="col-md-4 col-sm-6 portfolio-item">
                   <div class="portfolio-caption">
-                    <a href="http://milendyankov.com/wedeploy-client/" class="portfolio-link" data-toggle="modal">
+                    <a href="http://commsen.com/wedeploy-client/" class="portfolio-link" data-toggle="modal">
                       <h4>WeDeploy Java Client</h4>
                     </a>
                     <p class="text-muted">Allows Java applications to talk to WeDeploy cloud services as if those were local ones.</p>
@@ -43,8 +43,6 @@
                     <p class="text-muted">Make some of the usefull Karaf's functionalities (shell, features, ...) available in Liferay 7</p>
                   </div>
               </div>
-
-
               <div class="col-md-4 col-sm-6 portfolio-item ">
                   <div class="portfolio-caption">
                     <a href="https://github.com/azzazzel/Liferay-plugins" class="portfolio-link" data-toggle="modal">
