--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,40 +12,52 @@
             </div>
             <div class="row">
               <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="portfolio-caption">
+                  <a href="http://commsen.com/bom-helper-maven-plugin/" class="portfolio-link" data-toggle="modal">
+                    <h4>BOM Helper Maven Plugin</h4>
+                  </a>
+                  <p class="text-muted">BOM Helper Maven Plugin aims to help BOM creators by providing goals that allow to verify, modify and generate BOMs</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
                   <div class="portfolio-caption">
-                    <a href="http://commsen.com/wedeploy-maven-plugin/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/CommsenArchive/wedeploy-maven-plugin/" class="portfolio-link" data-toggle="modal">
                       <h4>WeDeploy Maven Plugin</h4>
                     </a>
                     <p class="text-muted">Allows to instantly deploy and run Java applications / microservices in WeDeploy cloud!</p>
+                    <div class="unmaintained"></div>
                   </div>
               </div>
               <div class="col-md-4 col-sm-6 portfolio-item">
                   <div class="portfolio-caption">
-                    <a href="http://commsen.com/wedeploy-client/" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/CommsenArchive/wedeploy-client/" class="portfolio-link" data-toggle="modal">
                       <h4>WeDeploy Java Client</h4>
                     </a>
                     <p class="text-muted">Allows Java applications to talk to WeDeploy cloud services as if those were local ones.</p>
+                    <div class="unmaintained"></div>
                   </div>
               </div>
               <div class="col-md-4 col-sm-6 portfolio-item">
                   <div class="portfolio-caption">
-                    <a href="https://github.com/azzazzel/em" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/CommsenArchive/em" class="portfolio-link" data-toggle="modal">
                       <h4>EM (Eccentric Modularity)</h4>
                     </a>
                     <p class="text-muted">Maven extension making it easy to build modular, contract based Java applications</p>
+                    <div class="unmaintained"></div>
                   </div>
               </div>
               <div class="col-md-4 col-sm-6 portfolio-item">
                   <div class="portfolio-caption">
-                    <a href="https://github.com/azzazzel/liferay-karaf" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/CommsenArchive/liferay-karaf" class="portfolio-link" data-toggle="modal">
                       <h4>Liferay Karaf compatibility</h4>
                     </a>
                     <p class="text-muted">Make some of the usefull Karaf's functionalities (shell, features, ...) available in Liferay 7</p>
+                    <div class="unmaintained"></div>
                   </div>
               </div>
               <div class="col-md-4 col-sm-6 portfolio-item ">
                   <div class="portfolio-caption">
-                    <a href="https://github.com/azzazzel/Liferay-plugins" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/CommsenArchive/liferay-multi-device-ext" class="portfolio-link" data-toggle="modal">
                       <h4>Liferay Deivce Recognition</h4>
                     </a>
                     <p class="text-muted">Liferay extension allowing to recognize user's device and perform device specific actions </p>
@@ -54,7 +66,7 @@
               </div>
               <div class="col-md-4 col-sm-6 portfolio-item ">
                   <div class="portfolio-caption">
-                    <a href="https://github.com/azzazzel/Liferay-plugins" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/CommsenArchive/Liferay-plugins" class="portfolio-link" data-toggle="modal">
                       <h4>Liferay plugins</h4>
                     </a>
                     <p class="text-muted">Collection of free and open source Liferay plugins (Tailgate, CustomGlobalMarkup, UI Taglib Demo)</p>
