--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -408,6 +408,7 @@ section h3.section-subheading {
     max-width: 400px;
     text-align: center;
     background-color: #fff;
+    height: 10vw;
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
